@@ -2591,7 +2591,13 @@ This can be overridden by the &env-var; <envar>CLISP_LINKKIT</envar>.</para>
  When <replaceable>verbose</replaceable> is non-&nil;, the full list of
  module lisp function names written in &c-lang; (<type>Subr</type>s) and
  the full list of internal lisp objects available in &c-lang; code
- are additionally returned for the total of 5 values.</para></section>
+ are additionally returned for the total of 5 values.</para>
+
+<para>When &name; is <constant>:FFI</constant>, returns the list of
+ shared libraries opened using &library-k;.
+ When <replaceable>verbose</replaceable> is non-&nil;, return the
+ &alist; of DLL names and all foreign objects associated with it.</para>
+</section>
 
 <section id="mod-dynload"><title>Function &mod-dynload;</title>
 <subtitle>Platform dependent: some &unix; platforms only, compiled &with;
